# openapi-doc/src/main/spec/one-stop-openapi.yaml
@@ -158,8 +158,12 @@ paths:
             schema:
               $ref: "#/components/schemas/UserRegisterRequest"
       responses:
-        "204":
+        "200":
           description: "successful operation"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserRegisterResponse'
         "409":
           description: "Email already in use."
         "500":
@@ -476,7 +480,16 @@ components:
           type: string
           format: email
 
-    UserUpdateRequest:
+    UserRegisterResponse:
+      type: object
+      required:
+        - token
+      properties:
+        token:
+          description: "The unique token used to identify the registration"
+          type: string
+
+    UserProfileRequest:
       type: object
       required:
         - username
@@ -515,9 +528,9 @@ components:
           description: The user's phone number
           example: 0123456789
 
-    UserProfileRequest:
+    UserUpdateRequest:
       allOf:
-        - $ref: "#/components/schemas/UserUpdateRequest"
+        - $ref: "#/components/schemas/UserProfileRequest"
         - type: object
       type: object
       required:
@@ -569,18 +582,13 @@ components:
               - include at least one non-alpha-numeric character
           example: Simple-Banking-216
 
-    UserResponse:
+    UserProfileResponse:
       type: object
       required:
         - username
         - givenName
         - email
       properties:
-        id:
-          type: string
-          format: uuid
-          description: The Creditor Id
-          example: 07061d76-74f3-4163-aa07-fb6909681f81
         username:
           type: string
           description: The user's username
@@ -627,21 +635,28 @@ components:
           format: date-time
           description: The date the user account was blocked
           example: 2019-01-01T00:00:00.000Z
-        roles:
-          type: array
-          items:
-            type: string
-            description: The authorisation roles that the user holds
-            example: admin
 
-    UserProfileResponse:
+    UserResponse:
       allOf:
-        - $ref: "#/components/schemas/UserResponse"
+        - $ref: "#/components/schemas/UserProfileResponse"
         - type: object
           required:
+            - id
             - username
             - givenName
             - email
+          properties:
+            id:
+              type: string
+              format: uuid
+              description: The Creditor Id
+              example: 07061d76-74f3-4163-aa07-fb6909681f81
+            roles:
+              type: array
+              items:
+                type: string
+                description: The authorisation roles that the user holds
+                example: admin
 
     BankResponse:
       type: object
